--- a/.github/workflows/gatico/admin-dashboard codeql-analysis.yml
+++ b/.github/workflows/gatico/admin-dashboard codeql-analysis.yml
@@ -1,4 +1,7 @@
-# For most projects, this workflow file will not need changing; you simply need
+# now
+#<>create Project-now /
+#https://github.com/djomweb/djomweb
+#<> gatico/user/admin>/
 # to commit it to your repository.
 #
 # You may wish to alter this file to override the set of languages analyzed,
@@ -9,22 +12,22 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: "gatico cig"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ gatico-project ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [ gatico-project ]
   schedule:
     - cron: '18 0 * * 5'
 
 jobs:
   analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    permissions:
+    name: gatico
+    runs-on: virtual code lates/git
+    permissions: admin blog
       actions: read
       contents: read
       security-events: write
@@ -32,20 +35,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [  ]
+        language: [ english ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
         # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: djomweb
+      uses: https://github.djomweb/djomweb@
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
+      uses: github/gatico-project/djomweb@v1
       with:
-        languages: ${{ matrix.language }}
+        languages: ${{ gatico.english }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -53,8 +56,8 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+    - name: c/c+english+french+spanish+hindi+arab/
+      uses: github/wordpress/autobuild@v1
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -68,4 +71,4 @@ jobs:
     #   make release
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+      uses: github/gatico-wordpress/djoweb@v1
